# MCP-LangChain

./: .gitignore  README.md  main.py  mcp_server.json  params.json  pyproject.toml
src/agent/: agent_dp.py  agent_qa.py  agent_supervisor.py  entity.py  models.py  prompts.py
src/app/: __init__.py  chainlitUI.py
src/clients/: entity.py  langchain_mcp_adapter.py  tools.py  util.py
src/rag/: entity.py  file_load.py  prompts.py  rag_global.py  rag_standard.py  rag_summary.py  retrieval.py  util.py
src/server/: server_rag.py  server_sql.py
src/workflows/: __init__.py  configuration.py  entity.py  graph.py  options.py  prompts.py  state.py  utils.py
